# nc_json

./: CMakeLists.txt  README.md  groups.nco.json  nc_api.cc  nc_api.hh  nc_data.hh  nc_iterate.cc  nc_json.cc  nc_json.hh  nc_read.cc  nc_read.hh  read_nc.cc  read_ncjson.cc  variables.nco.json
gasonpp/: jsonbuilder.hpp
